--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -115,6 +115,7 @@ ManualIPAddress=
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Monster")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="WarriorWeapon")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Interactable")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel5,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="MonsterAttack")
 +EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="Warrior",Response=ECR_Overlap),(Channel="Monster",Response=ECR_Overlap),(Channel="Interactable",Response=ECR_Overlap)))
 +EditProfiles=(Name="OverlapAllDynamic",CustomResponses=((Channel="Warrior",Response=ECR_Overlap),(Channel="Monster",Response=ECR_Overlap),(Channel="Interactable",Response=ECR_Overlap)))
 +EditProfiles=(Name="IgnoreOnlyPawn",CustomResponses=((Channel="Warrior",Response=ECR_Ignore),(Channel="Monster",Response=ECR_Ignore)))
